# pta

./: .gitattributes  CMakeLists.txt  Factorial.cpp  Median.cpp  README.md  SearchBin.cpp  main.cpp
BasicLevel/: Code1008.cpp  Code1009.cpp  Code1010.cpp  Code1016.cpp  Code1021.cpp  Code1023.cpp  Code1036.cpp  Code1037.cpp  Code1041.cpp  Code1042.cpp  Code1043.cpp  Code1046.cpp  Code1047.cpp  Code1061.cpp  Code1063.cpp  Code1076.cpp  Code1087.cpp  Code1093.cpp
