cmake_minimum_required(VERSION 3.15)
project(PAT)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(b1010 BasicLevel/Code1010.cpp)
add_executable(b1009 BasicLevel/Code1009.cpp)
add_executable(b1008 BasicLevel/Code1008.cpp)
add_executable(b1037 BasicLevel/Code1037.cpp)
add_executable(b1061 BasicLevel/Code1061.cpp)
add_executable(b1016 BasicLevel/Code1016.cpp)
add_executable(b1023 BasicLevel/Code1023.cpp)
add_executable(b1047 BasicLevel/Code1047.cpp)
add_executable(b1087 BasicLevel/Code1087.cpp)
add_executable(b1043 BasicLevel/Code1043.cpp)
add_executable(b1063 BasicLevel/Code1063.cpp)
add_executable(b1021 BasicLevel/Code1021.cpp)
add_executable(b1046 BasicLevel/Code1046.cpp)
add_executable(b1042 BasicLevel/Code1042.cpp)
add_executable(b1036 BasicLevel/Code1036.cpp)
add_executable(b1041 BasicLevel/Code1041.cpp)
add_executable(b1093 BasicLevel/Code1093.cpp)
add_executable(b1076 BasicLevel/Code1076.cpp)